# solidworks-automation

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml
docs/: README.md
docs/sldworksapi/: FunctionalCategories-sldworksapi.md  ReleaseNotes-sldworksapi.md  SolidWorks.Interop.sldworks.md  SolidWorks.Interop.sldworks~SolidWorks.Interop.sldworks.DAssemblyDocEvents_ActiveAnnotationViewChangeNotifyEventHandler.md  SolidWorks.Interop.sldworks~SolidWorks.Interop.sldworks.DAssemblyDocEvents_ActiveConfigChangeNotifyEventHandler.md  SolidWorks.Interop.sldworks~SolidWorks.Interop.sldworks.DAssemblyDocEvents_ActiveConfigChangePostNotifyEventHandler.md  SolidWorks.Interop.sldworks~SolidWorks.Interop.sldworks.DAssemblyDocEvents_ActiveDisplayStateChangePostNotifyEventHandler.md  SolidWorks.Interop.sldworks~SolidWorks.Interop.sldworks.DAssemblyDocEvents_ActiveDisplayStateChangePreNotifyEventHandler.md  SolidWorks.Interop.sldworks~SolidWorks.Interop.sldworks.DAssemblyDocEvents_ActiveViewChangeNotifyEventHandler.md  SolidWorks.Interop.sldworks~SolidWorks.Interop.sldworks.DAssemblyDocEvents_AddCustomPropertyNotifyEventHandler.md  (+14506 more)
examples/: model_meshing_gears.py  model_product_propeller.py  test_contour_selection.py  test_equation_involute_curve.py  test_equation_involute_single.py  test_equation_slot_profile.py  test_equation_spline_minimal.py  test_loft_smoke.py
scripts/: build_sw_api_docs.py
solidworks_com/: __init__.py  app.py  assembly.py  builders.py  com.py  constants.py  docs.py  errors.py  geometry.py  model.py  units.py
(+1961 files in other folders)
