[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solidworks-com"
version = "0.1.0"
description = "Ergonomic Python wrappers for the SOLIDWORKS COM API."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pywin32>=306; platform_system == 'Windows'",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["solidworks_com*"]
